WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63753
WebKit2: DidFinishLoadForFrame is never called on iframes when loads are cancelled by willSendRequest
https://bugs.webkit.org/show_bug.cgi?id=63753
Summary
WebKit2: DidFinishLoadForFrame is never called on iframes when loads are canc...
Brian Weinstein
Reported
2011-06-30 14:45:59 PDT
Consider the snippet of code: <html> <body> <iframe src="
http://example.com
"></iframe> </body> </html> If willSendRequest returns 0 for the load of
http://example.com
, DidFinishLoadForFrame is never called for either the iframe, or the main frame. This is the cause of the unexpected failures mentioned in the Mac WebKit2 Skipped list: # Unexplained failures after implementing willSendRequestReturnsNull fast/loader/onload-willSendRequest-null-for-frame.html plugins/plugin-document-willSendRequest-null.html
Attachments
[PATCH] Fix
(2.73 KB, patch)
2011-06-30 15:29 PDT
,
Brian Weinstein
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2011-06-30 15:29:03 PDT
Created
attachment 99376
[details]
[PATCH] Fix
Darin Adler
Comment 2
2011-06-30 16:23:46 PDT
Comment on
attachment 99376
[details]
[PATCH] Fix Your patch did not apply in the EWS for some reason. But the code change looks great!
Brian Weinstein
Comment 3
2011-06-30 16:25:16 PDT
(In reply to
comment #2
)
> (From update of
attachment 99376
[details]
) > Your patch did not apply in the EWS for some reason. But the code change looks great!
That is because mac-wk2/Skipped was moved to just platform/wk2/Skipped this morning. I'll need to update and move my Skipped list changes over to that file instead. Thanks for the review!
Jessie Berlin
Comment 4
2011-06-30 16:57:54 PDT
(In reply to
comment #1
)
> Created an attachment (id=99376) [details] > [PATCH] Fix
Would it be possible to write an API test for this?
Brian Weinstein
Comment 5
2011-06-30 17:12:15 PDT
(In reply to
comment #4
)
> (In reply to
comment #1
) > > Created an attachment (id=99376) [details] [details] > > [PATCH] Fix > > Would it be possible to write an API test for this?
This is covered by layout tests. I could enhance the output of the testing here slightly by having this test dump frame loading callbacks, but it wouldn't change what is being tested.
Brian Weinstein
Comment 6
2011-07-01 09:51:52 PDT
Landed in
r90238
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug