WebKit2: DidFinishLoadForFrame is never called on iframes when loads are cancelled by willSendRequest https://bugs.webkit.org/show_bug.cgi?id=63753

Reviewed by Darin Adler.

Source/WebKit2:

When deciding a policy for a null request, call the callback that was passed
to WebKit2 and say that we used the loader.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchDecidePolicyForResponse):

LayoutTests:

Unskip WebKit2 tests that now pass.

* platform/wk2/Skipped:



Canonical link: https://commits.webkit.org/79508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90238 268f45cc-cd09-0410-ab3c-d52691b4dbfc